--- a/src/components/Airdrop/Airdrop.css
+++ b/src/components/Airdrop/Airdrop.css
@@ -180,7 +180,7 @@
   color: #fff;
   line-height: 45px;
   margin: auto;
-  text-shadow: 0 1px 1px #1b1b31;
+  text-shadow: 0 1px 1px #07f00f;
   line-break: anywhere;
 }
 
