--- a/src/components/Launchpad/Launchpad.css
+++ b/src/components/Launchpad/Launchpad.css
@@ -9,7 +9,7 @@
         padding: 80px 0 0;
         position: relative;
         min-height: calc(100vh - 255px);
-        background-color: #09162B;
+        background-color: #28ed09;
         overflow: auto;
 
 }
@@ -52,13 +52,13 @@
     background-color: #09162B;
     border-radius: 10px;
     color: #fff;
-    box-shadow: 0 3px 3px 0 #03111c;
-    text-shadow: 0 1px 1px #23233b;
+    box-shadow: 0 3px 3px 0 #0a07e3;
+    text-shadow: 0 1px 1px #dbf51b;
 }
 
 .line-perch {
     height: 25px;
-    border-left: 1px solid #03111c;
+    border-left: 1px solid #dbf51b;
     margin: 0 10px;
 }
 
