--- a/src/components/Airdrop/Airdrop.css
+++ b/src/components/Airdrop/Airdrop.css
@@ -311,7 +311,7 @@
   font-weight: 500;
   border: 0 #000;
   color: #fff;
-    background-image: linear-gradient(180deg , #db14bd, #db14bd);
+    background-image: linear-gradient(180deg , #db14bd, #0000FF);
 }
 
 @media (max-width: 1000px) {
