--- a/src/components/Launchpad/Launchpad.css
+++ b/src/components/Launchpad/Launchpad.css
@@ -299,7 +299,7 @@
     font-weight: 500;
     border: 0 #000;
     color: #fff;
-    background-image: linear-gradient(180deg , #00e2c8, #00e2c8);
+    background-image: linear-gradient(180deg , #db14bd, #0000FF);
 }
 
 
