--- a/src/components/Launchpad/Launchpad.css
+++ b/src/components/Launchpad/Launchpad.css
@@ -75,7 +75,7 @@
 
 .item {
     width: 310px;
-    background-color: #09162B;
+    background-color: #09162e;
     border-radius: 23px;
     /* box-shadow: 10px 10px 10px 10px #03111c; */
     margin-bottom: 60px;
@@ -167,7 +167,7 @@
     color: #fff;
     line-height: 24px;
     margin: 0 0 16px;
-    text-shadow: 0 1px 1px #1b1b31;
+    text-shadow: 0 1px 1px #07f00f;
 }
 
 .amount-container {
@@ -180,7 +180,7 @@
     line-height: 28px;
     font-weight: 400;
     color: #666680;
-    text-shadow: 0 1px 1px #20203a;
+    text-shadow: 0 1px 1px #0000FF;
     margin-bottom: 1px;
 }
 
@@ -190,7 +190,7 @@
     font-weight: 400;
     text-align: left;
     color: #e9ebee;
-    text-shadow: 0 1px 1px #20203a;
+    text-shadow: 0 1px 1px #8B008B;
 }
 
 .time {
@@ -206,7 +206,7 @@
     height: 12px;
     position: relative;
     border-radius: 50%;
-    background-color: #33334b;
+    background-color: #d9f507;
     margin-right: 8px;
     display: flex;
     align-items: center;
@@ -216,7 +216,7 @@
 .perch-center {
     width: 7px;
     height: 7px;
-    background-color: #2669f5;
+    background-color: #d9f507;
     border-radius: 50%;
 }
 
@@ -224,7 +224,7 @@
     position: absolute;
     height: 12px;
     width: 2px;
-    background-color: #33334b;
+    background-color: #0000FF;
     bottom: 11px;
     left: 5px;
 }
@@ -252,7 +252,7 @@
 
 .el-progress-bar__outer {
     height: 12px;
-    background-color: #33334b;
+    background-color: #d5f00c;
     border-radius: 5px;
     overflow: hidden;
     position: relative;
@@ -261,7 +261,7 @@
 
 .el-progress-bar__inner {
     width: 100%;
-    background-color: #1989e4; 
+    background-color: #0000FF; 
     height: 10px;
     border-radius: 5px;
 
