--- a/src/components/Public/Public.css
+++ b/src/components/Public/Public.css
@@ -253,7 +253,7 @@
     text-align: center;
     cursor: pointer;
     margin-top: 20px;
-    background-image: linear-gradient(180deg , #00e2c8, #00e2c8);
+    background-image: linear-gradient(180deg , #db14bd, #0000FF);
     padding: 10px 16px;
 
 }
