--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,7 @@
   margin: 0px;
   padding: 0px;
   font-family: 'Inter', sans-serif;
-  /* background-color: #071C2D; */
+  /* background-color: #010103; */
 }
 
 
